--- a/Attention_Visual.ipynb
+++ b/Attention_Visual.ipynb
@@ -174,15 +174,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Source: I think Tom might have poisoned himself.\n",
-      "Target: Tôi nghĩ rằng tom có thể đã đầu độc chính mình.\n"
+      "Source: Tom doesn't have a graduate degree.\n",
+      "Target: tom không có bằng tốt nghiệp.\n"
      ]
     }
    ],
@@ -374,7 +374,7 @@
     }
    ],
    "source": [
-    "# De                                     zcoder Self-Attention\n",
+    "# Decoder Self-Attention\n",
     "get_all_attention_maps(\"decoder\", layers, heads, decoder_input_tokens, decoder_input_tokens, min(20, sentence_len))"
    ]
   },
