upload colab train notebook

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,29 @@
     "from config import get_config, latest_weights_file_path\n",
     "from train import get_model, get_ds, run_validation\n",
     "from translate import translate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'translate' from '/Users/longnguyen/Desktop/School/SEM7/CS115-TCKHMT/Self study/Transformers/translate.py'>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import importlib\n",
+    "import translate  \n",
+    "\n",
+    "importlib.reload(translate)\n"
    ]
   },
   {
@@ -127,21 +150,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/longnguyen/Desktop/School/SEM7/CS115-TCKHMT/Self study/Transformers/translate.py:21: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  state = torch.load(model_filename)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using device: mps\n",
-      "    SOURCE: I am flying\n",
-      " PREDICTED: tôi đang bay  "
+      "tôi đang bay\n"
      ]
     }
    ],
    "source": [
-    "t = translate(\"I am flying\")"
+    "print(translate(\"I am flying\"))"
    ]
   }
  ],
